--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
   <head></head>
   <body>
     <h1>Mi página</h1>
-    <p>Iker Zalbide</p>
-    Maria e Ivan estan editando
+    <p>Hola mundo</p>
   </body>
 </html>
